--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">Vyfe</string>
     <string name="settings">settings</string>
-    <string name="lancer_une_session">Lancer une session</string>
-    <string name="lancer_une_session_collaborative">Lancer une session collaborative</string>
-    <string name="mes_vid_os">Mes vidéos</string>
+    <string name="start_session">Lancer une session</string>
+    <string name="start_multi_session">Lancer une session collaborative</string>
+    <string name="my_videos">Mes vidéos</string>
     <string name="user_name">User Name</string>
+    <string name="search">Rechercher</string>
 </resources>
