Création profil_activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="my_videos">Mes vidéos</string>
     <string name="user_name">User Name</string>
     <string name="search">Rechercher</string>
+    <string name="username">My Name</string>
 </resources>
