--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="user_name">User Name</string>
     <string name="search">Rechercher</string>
     <string name="username">My Name</string>
+    <string name="category">Category</string>
 </resources>
