--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="add_description">Ajouter une description</string>
     <string name="my_analyse">Mes grilles d\'analyses</string>
     <string name="title_grille">Titre de la grille</string>
-    <string name="add_moment">Ajouter un moment</string>
+    <string name="add_evenement">Ajouter un événement</string>
     <string name="go">DEMARRER</string>
     <string name="back">RETOUR</string>
     <string name="share_url">Partagez l\'adresse URL à vos apprenants</string>
