--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,8 @@
     <string name="share_url">Partagez l\'adresse URL à vos apprenants</string>
     <string name="url">http://vyfe.co/live/356</string>
     <string name="category">Category</string>
-    <string name ="nom_observation">Nom observation</string>
+    <string name="nom_observation">Nom observation</string>
     <string name="avatar">avatar</string>
+    <string name="new_grid">Nouvelle grille d\'analyse</string>
 
 </resources>
