--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,7 @@
     <string name="video_name">Nom de la vidéo</string>
     <string name="record_session">Enregistrer une session</string>
     <string name="modif_tags">Ajouter ou modifier les événements</string>
+    <string name="add_tags">Ajouter des événements</string>
+    <string name="edit_tags">Modifier les événements</string>
 
 </resources>
