--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,5 +58,6 @@
     <string name="infos_video">Informations sur la vidéo</string>
     <string name="video_name">Nom de la vidéo</string>
     <string name="record_session">Enregistrer une session</string>
+    <string name="next">Suivant</string>
 
 </resources>
