--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,5 +68,7 @@
     <string name="confirm_delete_video">Voulez-vous vraiment supprimer cette vidéo ?</string>
     <string name="cancel">Annuler</string>
     <string name="delete">Supprimer</string>
+    <string name="wait_few_minutes">Cela peut prendre plusieurs minutes...</string>
+    <string name="save_in_progress">Sauvegarde en cours...</string>
 
 </resources>
