--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,5 +74,7 @@
     <string name="logout">Déconnection</string>
     <string name="enter_email">Entrez une adresse mail</string>
     <string name="enter_password">Entrer un mot de passe</string>
+    <string name="mail_send">Email envoyé</string>
+    <string name="mail_unkown">Email inconnu</string>
 
 </resources>
