--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,7 @@
     <string name="app_name">Vyfe</string>
     <string name="video_tittle">Titre de la vidéo</string>
     <string name="video_info">Informations sur la vidéo</string>
-    <string name="folder">Dossier</string>
-    <string name="description">Description</string>
+    <string name="description">Pas de description</string>
     <string name="play_video">Visionner</string>
     <string name="edit">Modifier</string>
     <string name="upload">Uploader</string>
@@ -16,11 +15,9 @@
     </string-array>
 
     <string name="title_video">Titre de la vidéo</string>
-    <string name="settings">settings</string>
     <string name="start_session">Lancer une session</string>
     <string name="start_multi_session">Lancer une session collaborative</string>
     <string name="my_videos">Mes vidéos</string>
-    <string name="user_name">User Name</string>
     <string name="search">Rechercher</string>
     <string name="hello_user">Bonjour</string>
     <string name="connected">Connection</string>
