--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,6 @@
     <string name="mail_unkown">Email inconnu</string>
     <string name="send">Envoyer</string>
     <string name="date">Date</string>
+    <string name="contact">Veuillez contacter *******</string>
+    <string name="create_account">Créer un compte</string>
 </resources>
