--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,7 @@
     <string name="date">Date</string>
     <string name="contact">Vous pouvez nous contacter sur : www.vyfe.com</string>
     <string name="create_account">Créer un compte</string>
+    <string name="havent_grid">Vous n\'avez pas encore de grille</string>
+    <string name="import_grid">Importer une grille</string>
+    <string name="havent_tag">Vous n\'avez pas de tags</string>
 </resources>
