--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,5 @@
     <string name="havent_grid">Vous n\'avez pas encore de grille</string>
     <string name="import_grid">Importer une grille</string>
     <string name="havent_tag">Vous n\'avez pas de tags</string>
+    <string name="title">Veuillez renseigner un titre de vidéo</string>
 </resources>
