--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,5 @@
     <string name="import_grid">Importer une grille</string>
     <string name="havent_tag">Vous n\'avez pas de tags</string>
     <string name="title">Veuillez renseigner un titre de vidéo</string>
+    <string name="double_name">Nom déjà utilisé. Veuillez renseigner un nouveau nom</string>
 </resources>
