--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Vyfe</string>
     <string name="video_tittle">Titre de la vidéo</string>
     <string name="video_info">Informations sur la vidéo</string>
-    <string name="description">Pas de description</string>
+    <string name="no_description">Pas de description</string>
     <string name="play_video">Visionner</string>
     <string name="edit">Modifier</string>
     <string name="upload">Uploader</string>
