toast connexion changé en textview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,7 +79,7 @@
     <string name="mail_unkown">Email inconnu</string>
     <string name="send">Envoyer</string>
     <string name="date">Date</string>
-    <string name="contact">Vous pouvez nous contacter sur : www.vyfe.com</string>
+    <string name="contact">Vous pouvez nous contacter sur : www.vyfe-app.com</string>
     <string name="create_account">Créer un compte</string>
     <string name="havent_grid">Vous n\'avez pas encore de grille</string>
     <string name="import_grid">Importer une grille</string>
