--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,4 +89,7 @@
     <string name="double_name">Nom déjà utilisé. Veuillez renseigner un nouveau nom</string>
     <string name="upload_video">Votre vidéo a été mise en ligne</string>
     <string name="error">erreur :</string>
+    <string name="quit_app">Voulez-vous quitter l\'application</string>
+    <string name="yes">Oui</string>
+    <string name="no">Non</string>
 </resources>
