--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="password">Mot de passe</string>
     <string name="lost_password">Mot de passe oublié ?</string>
     <string name="connected_maj">Se connecter</string>
-    <string name="info_session">Information sur la session</string>
+    <string name="info_session">Informations sur la session</string>
     <string name="add_description">Ajouter une description</string>
     <string name="my_analyse">Mes grilles d\'analyses</string>
     <string name="grid_title">Titre de la grille</string>
