--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="no">Non</string>
     <string name="import_grid_arrow">Importer une grille</string>
     <string name="arrow"> \ \ \ ▼</string>
+    <string name="choose_name_grid">Indiquez un titre à votre grille d\'observation</string>
 </resources>
