--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,5 @@
     <string name="import_grid_arrow">Importer une grille</string>
     <string name="arrow"> \ \ \ ▼</string>
     <string name="choose_name_grid">Indiquez un titre à votre grille d\'observation</string>
+    <string name="empty_grid">Veuiller indiquer des tags ou une grille d\'analyse</string>
 </resources>
