design page connexion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="my_videos">Mes vidéos</string>
     <string name="search">Rechercher</string>
     <string name="hello_user">Bonjour</string>
-    <string name="connected">Connection</string>
+    <string name="connected">Connexion</string>
     <string name="email">Email</string>
     <string name="password">Mot de passe</string>
     <string name="lost_password">Mot de passe oublié ?</string>
