--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,10 +39,10 @@
     <string name="add">Ajouter un tag</string>
     <string name="end">Terminer</string>
     <string name="name_event">Nom du tag</string>
-    <string name="color_event">Couleur de l\'évènement</string>
+    <string name="color_event">Couleur du tag</string>
     <string name="def_colot">Définissez un nom et une couleur au tag</string>
-    <string name="grid_import">Ou importer une grille d\'analyse</string>
-    <string name="new_grid2">Créer une nouvelle grille d\'analyse</string>
+    <string name="grid_import">Ou importer une grille d\'observation</string>
+    <string name="new_grid2">Créer une nouvelle grille d\'observation</string>
     <string name="move">Tag déplacé</string>
     <string name="delete_tag">Tag supprimé</string>
     <string name="infos_video">Informations sur la vidéo</string>
