--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,5 @@
     <string name="empty_grid">Veuiller indiquer des tags ou une grille d\'analyse</string>
     <string name="title_grid">Titre de votre grille d\'observation :</string>
     <string name="title_session">Titre de votre vidéo :</string>
+    <string name="active_wifi">Vous devez posséder une connexion internet pour vous identifiez</string>
 </resources>
