--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,6 +98,7 @@
     <string name="save_session">Voulez vous sauver la session en cours?</string>
     <string name="storagefree">Stockage disponible : </string>
     <string name="pourcentage"> %</string>
-    <string name="fullstorage">\n Attention votre stockage est plein !</string>
+    <string name="fullstorage">\nAttention votre stockage est plein !\nFonctionnalités limitées</string>
+    <string name="dont_save_session">Vous ne disposez pas d\'assez d\'espace de stockage pour enregistrer la Session. \n\n Liberez de l\'espace pour enregistrer une nouvelle session </string>
 
 </resources>
