--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,9 @@
     <string name="upload">Uploader</string>
     <string name="information">Informations sur la vidéo</string>
     <string name="title_video">Titre de la vidéo</string>
-    <string name="start_session">Lancer une session</string>
+    <string name="start_session">2- Lancer une session</string>
     <string name="start_multi_session">Lancer une session collaborative</string>
-    <string name="my_videos">Mes vidéos</string>
+    <string name="my_videos">3- Consulter vos vidéos</string>
     <string name="search">Rechercher</string>
     <string name="hello_user">Bonjour</string>
     <string name="connected">Connexion</string>
