--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="name_event">Nom du tag</string>
     <string name="color_event">Couleur du tag</string>
     <string name="def_colot">Définissez un nom et une couleur au tag</string>
-    <string name="grid_import">Ou importer une grille d\'observation</string>
+    <string name="grid_import">Choississez votre grille d\'observation :</string>
     <string name="new_grid2">Créer une nouvelle grille d\'observation</string>
     <string name="move">Tag déplacé</string>
     <string name="delete_tag">Tag supprimé</string>
@@ -80,7 +80,7 @@
     <string name="quit_app">Voulez-vous quitter l\'application</string>
     <string name="yes">Oui</string>
     <string name="no">Non</string>
-    <string name="import_grid_arrow">Importer une grille</string>
+    <string name="import_grid_arrow">Sélectionner une grille</string>
     <string name="arrow"> \ \ \ ▼</string>
     <string name="choose_name_grid">Indiquez un titre à votre grille d\'observation</string>
     <string name="empty_grid">Veuiller indiquer des tags ou une grille d\'analyse</string>
