--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,8 +82,8 @@
     <string name="no">Non</string>
     <string name="import_grid_arrow">Sélectionner une grille</string>
     <string name="arrow"> \ \ \ ▼</string>
-    <string name="choose_name_grid">Indiquez un titre à votre grille d\'observation</string>
-    <string name="empty_grid">Veuiller indiquer des tags ou une grille d\'analyse</string>
+    <string name="choose_name_grid">Indiquez un titre à votre grille d\'observation :</string>
+    <string name="empty_grid">Veuiller indiquer des tags ou une grille d\'observation</string>
     <string name="title_grid">Titre de votre grille d\'observation :</string>
     <string name="title_session">Titre de votre vidéo :</string>
     <string name="add_tag">Ajouter le tag</string>
@@ -95,10 +95,15 @@
     <string name="expired_day">Attention, il ne vous reste qu\'un jour d\'utilidation</string>
     <string name="invalid_date">Date invalide</string>
     <string name="expired_licence">Votre licence a expiré, merci de nous contacter pour la prolonger</string>
-    <string name="save_session">Voulez vous sauver la session en cours?</string>
+    <string name="save_session">Voulez vous sauver la session en cours ?</string>
     <string name="storagefree">Stockage disponible : </string>
     <string name="pourcentage"> %</string>
     <string name="fullstorage">\nAttention votre stockage est plein !\nFonctionnalités limitées</string>
     <string name="dont_save_session">Vous ne disposez pas d\'assez d\'espace de stockage pour enregistrer la Session. \n\n Liberez de l\'espace pour enregistrer une nouvelle session </string>
+    <string name="save_grid">Enregistrer la nouvelle grille</string>
+    <string name="create_grid">Créer une nouvelle grille d\'observation</string>
+    <string name="create_grid2">Créer une grille</string>
+    <string name="create_title_video">Indiquez un titre à votre vidéo :</string>
+    <string name="edit_grid">1- Enregistrer une grille d\'observation</string>
 
 </resources>
