--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -68,7 +68,7 @@
     <string name="mail_unkown">Email unknown</string>
     <string name="send">Send</string>
     <string name="date">Date</string>
-    <string name="contact">Contact us: www.vyfe-app.com</string>
+    <string name="contact">Contact us: www.vyfe.fr</string>
     <string name="create_account">Create an account</string>
     <string name="havent_grid">You have no analysis window yet</string>
     <string name="havent_tag">You have no event</string>
