Create grid with viewmodel + BDD V2

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -22,7 +22,7 @@
     <string name="info_session">Informations session</string>
     <string name="add_description">Add description</string>
     <string name="my_analyse">My analysis window</string>
-    <string name="add_evenement">Add Event</string>
+    <string name="create_tags">Add Event</string>
     <string name="go">GO</string>
     <string name="back">Back</string>
     <string name="share_url">Share URL</string>
@@ -36,19 +36,19 @@
     <string name="choose">Chose</string>
     <string name="aleatory">Random color</string>
     <string name="end">End</string>
-    <string name="name_event">Tag name</string>
-    <string name="color_event">Tag color</string>
-    <string name="def_colot">Choose an event name and color</string>
+    <string name="tag_name">Tag name</string>
+    <string name="tag_color">Tag color</string>
+    <string name="def_color">Choose a tag name and a color</string>
     <string name="grid_import">Import an analysis window</string>
     <string name="new_grid2">Create a new analysis window</string>
-    <string name="move">Move event</string>
-    <string name="delete_tag">Delete event</string>
+    <string name="move">Move tag</string>
+    <string name="delete_tag">Delete tag</string>
     <string name="infos_video">Video informations</string>
     <string name="video_name">Video Name</string>
     <string name="record_session">Record a session</string>
-    <string name="modif_tags">Add or modify event</string>
-    <string name="add_tags">Add event</string>
-    <string name="edit_tags">Modify event</string>
+    <string name="modif_tags">Add or modify tag</string>
+    <string name="add_tags">Add tag</string>
+    <string name="edit_tags">Edit tag</string>
     <string name="next">Next</string>
     <string name="video_save">Session saved in your video</string>
     <string name="back_to_main">Back to main</string>
@@ -70,7 +70,7 @@
     <string name="contact">Contact us: www.vyfe.fr</string>
     <string name="create_account">Create an account</string>
     <string name="havent_grid">You have no analysis window yet</string>
-    <string name="havent_tag">You have no event</string>
+    <string name="havent_tag">You have no tag</string>
     <string name="description_added">Description added</string>
     <string name="title">Please inform a title of video</string>
     <string name="double_name">Name already used. Please inform a new name</string>
@@ -81,7 +81,7 @@
     <string name="no">No</string>
     <string name="import_grid_arrow">Import an analysis window</string>
     <string name="choose_name_grid">Choose name for your analysis window</string>
-    <string name="empty_grid">Select event or analysis window</string>
+    <string name="empty_grid">Select tag or analysis window</string>
     <string name="grid_title">Grid title</string>
     <string name="title_session">Video title :</string>
     <string name="add_tag">Add tag</string>
@@ -109,4 +109,16 @@
     <string name="license">No license found</string>
     <string name="problem">Authentication problem :</string>
     <string name="tagset_title_warning">Please give your session a title AND a grid</string>
+    <string name="color_gradient_blue_dark">Violet</string>
+    <string name="color_gradient_blue_light">Bleu clair</string>
+    <string name="color_gradient_faded_orange">Orange</string>
+    <string name="color_gradient_rosy">Rose</string>
+    <string name="color_gradient_red">Rouge</string>
+    <string name="color_gradient_blue">Bleu</string>
+    <string name="color_gradient_yellow">Jaune</string>
+    <string name="color_gradient_magenta_light">Violet Clair</string>
+    <string name="color_gradient_green_lightgreen">Vert</string>
+    <string name="color_gradient_grey">Gris</string>
+    <string name="grid_name_empty_warning">Vous devez renseigner un titre à votre grille et des tags</string>
+    <string name="save_grid_info">Grid saved</string>
 </resources>
